<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_a_weapon_linear_layout"
    android:background="?attr/custom_icons">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_item_radio_group"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="?attr/custom_primary_dark">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_add_weapon"
            android:textColor="?attr/custom_icons"
            android:id="@+id/radio_group_weapon"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_add_armor"
            android:textColor="?attr/custom_icons"
            android:id="@+id/radio_group_armor"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_add_item"
            android:textColor="?attr/custom_icons"
            android:id="@+id/radio_group_item"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--item name-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/item_name_hint"
            android:textSize="10sp"
            android:id="@+id/item_name"/>
        <!--item cost-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_cost"
            android:textSize="10sp"
            android:id="@+id/item_cost"/>
        <!--item weight-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_weight"
            android:textSize="10sp"
            android:id="@+id/item_weight"/>
    </LinearLayout>
    <!--weapon damage type and roll-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--ac-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_ac"
            android:textSize="10sp"
            android:id="@+id/item_ac"
            android:inputType="number"/>
        <!--weapon description-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/item_description_hint"
            android:textSize="10sp"
            android:id="@+id/item_description"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/item_weapon_data">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <!--item range-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_range"
            android:textSize="10sp"
            android:id="@+id/item_range"/>
        <!--damage type-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/item_damage_type"
            android:textSize="10sp"
            android:id="@+id/item_type"/>
        <!--damage roll-->
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_damage_roll"
            android:textSize="10sp"
            android:id="@+id/item_roll"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?attr/custom_primary_dark">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_add_strength"
                    android:textColor="?attr/custom_icons"
                    android:gravity="center"
                    android:id="@+id/item_radio_strength"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_add_dexterity"
                    android:textColor="?attr/custom_icons"
                    android:gravity="center"
                    android:id="@+id/item_radio_dexterity"/>
            </RadioGroup>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_add_proficient"
                android:textColor="#ffffff"
                android:gravity="center"
                android:id="@+id/item_proficient"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>