<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ie_spinner_title_export"
        android:gravity="center"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ie_export_text"
        android:gravity="center"
        android:textSize="15sp"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IE_Spinner"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </Spinner>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ie_export"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="exportCharacter"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="100dp"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ie_spinner_title_import"
        android:gravity="center"
        android:textSize="25sp"/>
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IE_Spinner_Import"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
    </Spinner>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ie_import"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="importCharacter"
        android:id="@+id/import_button"/>
</LinearLayout>