<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/custom_icons">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dice_heading"
            android:textSize="20sp"
            android:gravity="center"
            android:background="?attr/custom_primary_dark"
            android:textColor="?attr/custom_icons"
            android:padding="3dp"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="?attr/custom_primary">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/dice"
                android:adjustViewBounds="true"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="30sp"
                android:id="@+id/dice_output"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/diceOutputIndividual"
            android:gravity="center"
            android:layout_gravity="center_horizontal"/>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <!--dice rolls 4,6,8-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="?attr/custom_icons"
            android:padding="3dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d4"
                android:onClick="diceRoll"
                android:id="@+id/dice_d4"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d6"
                android:onClick="diceRoll"
                android:id="@+id/dice_d6"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d8"
                android:onClick="diceRoll"
                android:id="@+id/dice_d8"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d10"
                android:onClick="diceRoll"
                android:id="@+id/dice_d10"/>
        </LinearLayout>
        <!--dice rolls 10, 20, 100-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="?attr/custom_icons"
            android:padding="3dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d12"
                android:onClick="diceRoll"
                android:id="@+id/dice_d12"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d20"
                android:onClick="diceRoll"
                android:id="@+id/dice_d20"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d50"
                android:onClick="diceRoll"
                android:id="@+id/dice_d50"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/dice_d100"
                android:onClick="diceRoll"
                android:id="@+id/dice_d100"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>