<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/custom_primary_dark">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/custom_icons"
            android:text="@string/hp_dialog_title"
            android:textSize="25dp"/>
    </LinearLayout>

    <!--normal HP-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/custom_accent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="20sp"
            android:text="Hit Points: 5"
            android:id="@+id/HP_hp"
            android:textColor="?attr/custom_icons"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:id="@+id/HP_hp_plus"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:id="@+id/HP_hp_minus"/>
    </LinearLayout>
    <!--temporaryHP-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/custom_accent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="20sp"
            android:text="Temp Hit Points: 4"
            android:id="@+id/HP_temp"
            android:textColor="?attr/custom_icons"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:id="@+id/HP_temp_plus"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-"
            android:id="@+id/HP_temp_minus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/custom_primary_dark">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/HP_hit_dice"
            android:textSize="20sp"
            android:textColor="?attr/custom_icons"/>
    </LinearLayout>
    <!--dice headers-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/custom_accent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/HP_dialog_D6"
            android:id="@+id/HP_title_hit_dice_d6"
            android:textColor="?attr/custom_accent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/HP_dialog_D8"
            android:id="@+id/HP_title_hit_dice_d8"
            android:textColor="?attr/custom_icons"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/HP_dialog_D10"
            android:id="@+id/HP_title_hit_dice_d10"
            android:textColor="?attr/custom_icons"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/HP_dialog_D12"
            android:id="@+id/HP_title_hit_dice_d12"
            android:textColor="?attr/custom_icons"/>
    </LinearLayout>
    <!--Buttons which rolls the HP Dice-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/custom_accent">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="-1"
            android:id="@+id/HP_button_hit_dice_d6"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="-1"
            android:id="@+id/HP_button_hit_dice_d8"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="-1"
            android:id="@+id/HP_button_hit_dice_d10"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="-1"
            android:id="@+id/HP_button_hit_dice_d12"/>
    </LinearLayout>

</LinearLayout>